# c-plus-plus-warm-up

./: README.md
cis_bench/: CMakeLists.txt  README.md  main.cpp
semana0/: 01-main  01-main-hello.cpp  02-main  03-main  05-main  06-main  06-main-types.cpp  07-main  08-main  09-main  10-main  10-main-getreal.cpp  11-main  11-main-compound.cpp  11-main.txt  12-main  12-main-retangle.cpp  12-main.txt
semana0/0001/: 02-main-repeat.cpp  03-main-getinput.cpp  05-main-changevallue.cpp  07-main-multfloats.cpp  08-main-asciivalue.cpp  09-main-fharenheit.cpp  10-main-getreal.txt
semana1/001/: README  main  main.cpp
